XWIKI-20825: Edit autosave frequency contrast issue * Updated class name to be more specific and avoid triggering unexpected behaviours.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/edit.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/edit.less
@@ -7,7 +7,7 @@
   .buttons {
     margin: 0;
     padding: 1em;
-    #autosaveControl.disabled > label.frequency {
+    #autosaveControl.autosaveDisabled > label.frequency {
       .text-muted;
     }
   }
